--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/estilp.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="assets/estilo.css">
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -13,8 +19,34 @@
     </head>
 
     <body>
+        <div class="container-sm p-2">
+            <h1 class="protest-guerrilla-regular text-center text-muted">Calculadora</h1>
+            <form id="form">
+                <div id="result" class="mb-3 p-3 bg-dark bg-gradient text-light fs-3">Resultado</div>
+                <div class="mb-3">
+                    <label for="valor1"
+                        class="form-label ">Primeiro</label>
+                    <input type="number" class="form-control" id="valor1">
+                </div>
+                <div class="mb-3">
+                    <label for="valor2" class="form-label">Segundo</label>
+                    <input type="number" class="form-control" id="valor2">
+                </div>
+                <div class="mb-3">
+                    <select class="form-select" aria-label="Default select example" id="opper">
+                        <option selected>Escolha a operação</option>
+                        <option value="soma">Adição</option>
+                        <option value="subst">Subtração</option>
+                        <option value="mult">Multiplicação</option>
+                        <option value="div">Divisão</option>
+                      </select>
+                </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Calcular</button>
+                </div>
+            </form>
+        </div>
 
-        
         <script src="assets/app.js"></script>
 
         <script
